--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -10,5 +10,6 @@
  SKT_neutrality:0 "Holy Duchy of Sakartvelo"
  LUT_neutrality:0 "Duchy of Lutonea"
  NCT_neutrality:0 "Duchy of Nerrocita"
+ NCT_communism:0 "Free Commune of Forest Enyx"
  FSV_fascism:0 "Fascist State of Varania"
  
