war crimes part 1

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -12,4 +12,5 @@
  NCT_neutrality:0 "Duchy of Nerrocita"
  NCT_communism:0 "Free Commune of Forest Enyx"
  FSV_fascism:0 "Fascist State of Varania"
+ WMC_neutrality:0 "Welt's Mercenaries"
  
