--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -8,3 +8,8 @@
  VICTORY_POINTS_7847:0 "Prenzlau"
  VICTORY_POINTS_8455:0 "Shqiponja"
  VICTORY_POINTS_7660:0 "Castle Otu"
+ VICTORY_POINTS_8294:0 "Welt City"
+ VICTORY_POINTS_3669:0 "Fort Lena"
+ VICTORY_POINTS_8784:0 "Red City"
+ VICTORY_POINTS_8343:0 "Lemko"
+ VICTORY_POINTS_8020:0 "Goldenberry Farms"
