--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -2,7 +2,7 @@
  VAR_neutrality:0 "Kingdom of Varania"
  VAR_democratic:0 "Federated Republic of Varania"
  VAR_communism:0 "Socialist Republic of Varania"
- ELU_neutrality:0 "Duchy of Lusatia"
+ ELU_neutrality:0 "East Lusatia"
  EFS_fascism:0 "Eisenkorps Freistadt"
  SQP_neutrality:0 "Shqiperia"
  KIL_neutrality:0 "Holy Kingdom of the Isles"
